# user_image_annotator

./: .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  clean_user_image.cpp  contour_image_annotator.cpp  contour_image_annotator.h  contour_image_annotator_path.h.in  convert_n_colors.h  cv_conversion_float_uchar.h  depth_canny.h  ground_plane_finder.h  user_image_annotator.cpp
